# chatservers

./: CMakeLists.txt  ChatClient  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h  sqlconnRALL.hpp  sqlconnpool.hpp
include/server/model/: UserModel.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp
include/server/redis/: redis.hpp
src/: CMakeLists.txt
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/client/: CMakeLists.txt  main.cpp
src/server/db/: db.cpp  sqlconnpool.cpp
src/server/model/: friengmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
